# PI-6-Semestre-The-Last-

./: .dockerignore  .env.example  .gitignore  Dockerfile  create_tables.py  docker-compose.yaml  pyproject.toml  run-api.sh  teste.py
.github/workflows/: deploy.yml
app/: main.py
app/api/: __init__.py
app/api/routers/: __init__.py  ai.py  alert.py  auth.py  dashboard.py  home.py  maintenance.py  refuel.py  telephone_number.py  users.py  vehicle.py
app/common/exceptions/: __init__.py  abastecimento_exceptions.py  base_exceptions.py  http_exception_handler.py  maintenance_exceptions.py  manutencao_exceptions.py  (+4 more)
app/core/: config.py  database.py  dependencies.py  security.py
app/models/: __init__.py  alert.py  base.py  maintenance.py  refuel.py  telephone_number.py  user.py  vehicle.py
app/repositories/: __init__.py  alert_repository.py  dashboard_repository.py  maintenance_repository.py  refuel_repository.py  telephone_number_repository.py  user_repository.py  vehicle_repository.py
app/schemas/: __init__.py  ai.py  alert.py  auth.py  dashboard.py  enums.py  maintenance.py  refuel.py  telephone_number.py  user.py  vehicle.py
app/services/: __init__.py  ai_service.py  ai_training_service.py  alert_service.py  dashboard_service.py  maintenance_service.py  refuel_service.py  telephone_number_service.py  user_service.py  vehicle_service.py
models/ABC1234/: historico.npy  limites.joblib
models/ABC1D21/: historico.npy
models/ABC1D23/: historico.npy  limites.joblib  modelo.joblib
models/BSR-9B03/: historico.npy  limites.joblib  modelo.joblib  reader.py
(+3 files in other folders)
